syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "violet-wardrobe/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloWorldProtoV1";

// The greeting service definition.
service Greeter {
  // Gets a greeting for a user.
  rpc List (PageRequest) returns (HelloReply)  {
    option (google.api.http) = {
      get: "/list"
    };
  }

  // Gets a greeting for a user.
  rpc Get (HelloRequest) returns (HelloReply)  {
    option (google.api.http) = {
      get: "/get/:name"
    };
  }

  // Adds a greeting for a user.
  rpc Add (HelloRequest) returns (HelloReply)  {
    option (google.api.http) = {
      post: "/",
      body: "*"
    };
  }

  // Adds a greeting for a user.
  rpc Edit (HelloRequest) returns (HelloReply)  {
    option (google.api.http) = {
      put: "/",
      body: "*"
    };
  }

  // Adds a greeting for a user.
  rpc Del (HelloRequest) returns (HelloReply)  {
    option (google.api.http) = {
      delete: "/"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message PageRequest {
  int32 page_num = 1;
  int32 page_size = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
